clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20030330_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20030330-1.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
